--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,22 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
-black = "*"
+autopep8 = "*"
+flake8-import-order = "*"
+nose = "*"
 
 [packages]
+flask-restplus = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+pymysql = "*"
+werkzeug = "==0.16.0"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
+
+[scripts]
+lint = "flake8 --show-source ."
+format = "autopep8 -ivr ."
+serve = "flask run"
